# alacrterm

./: Cargo.toml  README.md
.claude/: SKILLS_OVERVIEW.md
.claude/skills/gpui-element/: SKILL.md
.claude/skills/gpui-element/references/: api-reference.md  examples.md  patterns.md
.claude/skills/gpui-style-guide/: SKILL.md
.github/workflows/: build.yml
assets/settings/: default.json
crates/: Cargo.toml
crates/alacrterm/: Cargo.toml  build.rs
crates/alacrterm/src/: assets.rs  layout.rs  main.rs  settings.rs  terminal_element.rs  terminal_view.rs  themes.rs
crates/settings/: Cargo.toml
crates/settings/src/: content_into_gpui.rs  lib.rs  settings_content.rs  terminal.rs  theme.rs
crates/terminal/: Cargo.toml
crates/terminal/examples/: demo.rs
crates/terminal/src/: alacritty.rs  default_colors.rs  lib.rs  pty_info.rs  terminal.rs  terminal_settings.rs  utils.rs
crates/terminal/src/alacritty/: hyperlinks.rs
crates/terminal/src/mappings/: colors.rs  keys.rs  mouse.rs
crates/terminal_view/: Cargo.toml
crates/terminal_view/src/: blink_manager.rs  context_menu.rs  scrollbar.rs  search_bar.rs  terminal_element.rs  terminal_path_like_target.rs  terminal_scrollbar.rs  terminal_view.rs  tooltip.rs
crates/theme/: Cargo.toml
crates/theme/src/: default_colors.rs  fallback_themes.rs  icon_theme.rs  registry.rs  styles.rs  theme.rs  theme_settings.rs  theme_settings_provider.rs
crates/theme/src/styles/: colors.rs  players.rs
crates/util/: Cargo.toml
crates/util/src/: paths.rs  util.rs
src/: assets.rs  main.rs  terminal_view.rs  themes.rs
themes/: ayu.json  tokyonight.json
