[package]
name = "alacrterm"
version = "0.1.0"
edition = "2024"

[dependencies]
terminal = { path = "crates/terminal" }
gpui = "0.2"
gpui-component = "0.5"
rust-embed = "8"
anyhow = "1.0"
alacritty_terminal = "0.25"

[workspace]
resolver = "3"
members = [
    "crates/terminal",
]

[workspace.dependencies]
gpui = "0.2"
gpui-component = "0.5"
anyhow = "1.0"
rust-embed = "8"
alacritty_terminal = "0.25"
libc = "0.2"
log = "0.4"
serde = "1.0"
thiserror = "2.0"
sysinfo = "0.38"
tokio = { version = "1", features = ["full"] }
fancy-regex = "0.17"
schemars = "1"
urlencoding = "2.1"
windows = {version = "0.62", features = ["Win32_Foundation", "Win32_System_Kernel", "Win32_System_SystemInformation", "Win32_System_SystemServices","Win32_System_Threading"]}