[workspace]
resolver = "3"
members = [
    "crates/terminal","crates/alacrterm"
]

[workspace.dependencies]
terminal = { path = "crates/terminal" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
async-channel = "2"
rust-embed = "8"
alacritty_terminal = "0.26"
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
sysinfo = "0.39"
tokio = { version = "1", features = ["full"] }
fancy-regex = "0.18"
schemars = "1"
urlencoding = "2.1"
smallvec = "1"
windows = {version = "0.62", features = ["Win32_Foundation", "Win32_System_Kernel", "Win32_System_SystemInformation", "Win32_System_SystemServices","Win32_System_Threading"]}
