[package]
name = "alacrterm"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
anyhow.workspace = true
rust-embed = { workspace = true }
settings = { workspace = true }
terminal = { workspace = true }
terminal_view = { workspace = true }
theme = { workspace = true }
util = { workspace = true }
