[package]
name = "alacrterm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
anyhow.workspace = true
rust-embed = { workspace = true }
settings = { workspace = true }
terminal = { workspace = true }
terminal_view = { workspace = true }
# theme = { workspace = true }
util = { workspace = true }

[build-dependencies]
embed-resource = "3.0"