[package]
name = "settings"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
indexmap = { version = "2.7.0", features = ["serde"] }
schemars = { version = "1.0", features = ["indexmap2"] }
gpui.workspace = true
log.workspace = true
util.workspace = true
rust-embed.workspace = true