[package]
name = "settings"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
indexmap.workspace = true
schemars = { workspace = true, features = ["indexmap2"] }
gpui.workspace = true
log.workspace = true
util.workspace = true
rust-embed.workspace = true
