[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal.workspace = true
gpui.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
sysinfo.workspace = true
smallvec.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true