[package]
name = "terminal_view"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/terminal_view.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-recursion.workspace = true
dirs.workspace = true
futures.workspace = true
gpui.workspace = true
gpui-component.workspace = true
itertools.workspace = true
log.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
shellexpand.workspace = true
terminal.workspace = true
# theme.workspace = true
util.workspace = true
smallvec.workspace = true

[dev-dependencies]
# editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true}
# project = { workspace = true, features = ["test-support"] }
# remote = { workspace = true, features = ["test-support"] }
# release_channel.workspace = true
# rpc = { workspace = true, features = ["test-support"] }
# semver.workspace = true
terminal = { workspace = true}
# workspace = { workspace = true, features = ["test-support"] }

# [package.metadata.cargo-machete]
# ignored = ["log"]
