[package]
name = "theme"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/theme.rs"
doctest = false

[dependencies]
anyhow.workspace = true
# collections.workspace = true
gpui.workspace = true
# syntax_theme.workspace = true
palette = { version = "0.7.5", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
# refineable.workspace = true
schemars = { version = "1.0", features = ["indexmap2"] }
serde.workspace = true
serde_json.workspace = true
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror.workspace = true
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
settings.workspace = true

[dev-dependencies]
gpui = { workspace = true }
