[package]
name = "theme"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/theme.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
palette = { version = "0.7.5", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
serde.workspace = true
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
gpui = { workspace = true }
