[package]
name = "theme"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/theme.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
palette.workspace = true
parking_lot.workspace = true
serde.workspace = true
strum.workspace = true

[dev-dependencies]
gpui = { workspace = true }
