[package]
name = "util"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "A collection of utility structs and functions used by Zed and GPUI"


[lib]
path = "src/util.rs"
doctest = true

[dependencies]
anyhow.workspace = true
globset = "0.4"
dunce = "1.0"
itertools.workspace = true
log.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
shlex = "1.3"
url.workspace = true
percent-encoding.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
which = "8.0"
dirs = "6.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["user"] }

[target.'cfg(windows)'.dependencies]
tendril = "0.4.3"

[dev-dependencies]
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
